aula de condicionais

--- a/ex002.html
+++ b/ex002.html
@@ -12,7 +12,7 @@
     <p>Pegando prompts e somando</p>
     
     <script>
-        var n1 = Number(window.prompt(`Digite um número`)); //pode escrever apenas parseInt. Se for decimal, parseFloat. Para o js decidir, pode usar apenas Numer(n)
+        var n1 = Number(window.prompt(`Digite um número`)); //pode escrever apenas parseInt. Se for decimal, parseFloat. Para o js decidir, pode usar apenas Number(n)
         
         var n2 = Number(window.prompt(`Digite outro número`));
         var soma = n1+n2;
