--- a/aula09/ex005.html
+++ b/aula09/ex005.html
@@ -38,7 +38,7 @@
 
         var div4 = document.querySelector('div#sel_msg');
 
-        div4.style.background = 'white'
+        div4.style.background = 'white';
         div4.style.color = 'black';
         
     </script>
