--- a/aula17-exercicios/index.html
+++ b/aula17-exercicios/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arryas e Funções - Exercício 1</title>
+    <title>Exercício 17 - javascript</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,20 +12,19 @@
         <h1>Analisador de Números</h1>
     </header>
     <main>
-        <div id="caixa_dados">
-           <p>Número (entre 1 e 100): <input type="number" id="numero"> <button type="submit" id="btnadd" onclick="adicionar()">Adicionar</button></p>
-           <p><select id="num_lista"></select></p>
-           <p><button type="submit" id="btn_finalizar">Finalizar 
-           </button></p>
-
-
+        <section>
             <div>
-                <p id="resultado"></p>
+                <p>Número (entre 1 e 100): <input type="number" name="fnum" id="fnum"> <input type="button" value="Adicionar" onclick="adicionar()"></p>
+                <p><Select class="sel_lista" id="flista" size="8"></Select></p>
+                <p><input type="button" value="Finalizar" onclick="finalizar()"></p>
             </div>
-        </div>
+            <div id="resultado" class="resultado">
+                
+            </div>
+        </section>
     </main>
     <footer>
-        <p>Exercício 1</p>
+        <p>@Thiago_Soares</p>
     </footer>
     <script src="script.js"></script>
 </body>
